// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive-transactions (provider=cockroachdb) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`Key (id)=('1') already exists.\`
`;

exports[`interactive-transactions (provider=cockroachdb) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=cockroachdb) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=cockroachdb) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=mongodb) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mongodb) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mongodb) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mysql) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`1062\`. Message: \`Duplicate entry '1' for key 'user.PRIMARY'\`
`;

exports[`interactive-transactions (provider=mysql) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mysql) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mysql) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`User_email_key\`
`;

exports[`interactive-transactions (provider=mysql,providerFlavor=js_planetscale) batching rollback 1`] = `target: tests.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry 'user_1@website.com' for key 'User.User_email_key' (errno 1062) (sqlstate 23000) (CallerID: userData1): Sql: "insert into \`User\`(id, email) values (:vtg1 /* VARCHAR */, :vtg2 /* VARCHAR */)", BindVars: {vtg1: "type:VARCHAR value:\\"clm7nwaig000k4pssom5g5sro\\""vtg2: "type:VARCHAR value:\\"user_1@website.com\\""} (errno 1062) (sqlstate 23000) during query: INSERT INTO \`tests\`.\`User\` (\`id\`,\`email\`) VALUES ('clm7nwaig000k4pssom5g5sro','user_1@website.com')`;

exports[`interactive-transactions (provider=mysql,providerFlavor=js_planetscale) rollback query 1`] = `target: tests.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry 'user_1@website.com' for key 'User.User_email_key' (errno 1062) (sqlstate 23000) (CallerID: userData1): Sql: "insert into \`User\`(id, email) values (:vtg1 /* VARCHAR */, :vtg2 /* VARCHAR */)", BindVars: {vtg1: "type:VARCHAR value:\\"clm7nz97s000e4pw8lqnrce1p\\""vtg2: "type:VARCHAR value:\\"user_1@website.com\\""} (errno 1062) (sqlstate 23000) during query: INSERT INTO \`tests\`.\`User\` (\`id\`,\`email\`) VALUES ('clm7nz97s000e4pw8lqnrce1p','user_1@website.com')`;

exports[`interactive-transactions (provider=mysql,providerFlavor=vitess_8) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`1062\`. Message: \`target: test-vitess-80.0.primary: vttablet: rpc error: code = AlreadyExists desc = Duplicate entry '1' for key 'User.PRIMARY' (errno 1062) (sqlstate 23000) (CallerID: userData1): Sql: "insert into \`User\`(id, email) values (:v1, :v2)", BindVars: {v1: "type:VARBINARY value:\\"1\\""v2: "type:VARBINARY value:\\"user_1@website.com\\""}\`
`;

exports[`interactive-transactions (provider=mysql,providerFlavor=vitess_8) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the (not available)
`;

exports[`interactive-transactions (provider=mysql,providerFlavor=vitess_8) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the (not available)
`;

exports[`interactive-transactions (provider=mysql,providerFlavor=vitess_8) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the (not available)
`;

exports[`interactive-transactions (provider=postgresql) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`23505\`. Message: \`Key (id)=(1) already exists.\`
`;

exports[`interactive-transactions (provider=postgresql) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=postgresql) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=postgresql) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=sqlite) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`2067\`. Message: \`UNIQUE constraint failed: User.email\`
`;

exports[`interactive-transactions (provider=sqlite) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=sqlite) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=sqlite) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the fields: (\`email\`)
`;

exports[`interactive-transactions (provider=sqlserver) batching raw rollback 1`] = `

Invalid \`prisma.$executeRaw()\` invocation:


Raw query failed. Code: \`2627\`. Message: \`Violation of PRIMARY KEY constraint 'User_pkey'. Cannot insert duplicate key in object 'dbo.User'. The duplicate key value is (1).\`
`;

exports[`interactive-transactions (provider=sqlserver) batching rollback 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX     email: 'user_1@website.com',
  XX   },
  XX }),
→ XX prisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`
`;

exports[`interactive-transactions (provider=sqlserver) batching rollback within callback 1`] = `

Invalid \`tx.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   }),
  XX ])
  XX 
→ XX await tx.user.create(
Unique constraint failed on the constraint: \`dbo.User\`
`;

exports[`interactive-transactions (provider=sqlserver) rollback query 1`] = `

Invalid \`prisma.user.create()\` invocation in
/client/tests/functional/interactive-transactions/tests.ts:0:0

  XX   },
  XX })
  XX 
→ XX await prisma.user.create(
Unique constraint failed on the constraint: \`dbo.User\`
`;
